--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "ava": "^1.0.0-beta.3",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "eslint-config-google": "^0.9.1"
+    "eslint-config-google": "^0.9.1",
+    "micro-dev": "^2.2.2"
   },
   "scripts": {
     "start": "yarn build && node ./dist/bin/index.js",
     "babel:watch": "babel src/lib -d dist/lib --watch",
-    "test:watch" :"ava --watch",
+    "test:watch": "ava --watch",
     "test": "ava",
     "build": "babel src -d dist"
   },
   "babel": {
-    "presets": ["env"]
+    "presets": [
+      "env"
+    ]
   },
   "ava": {
     "files": [
@@ -44,5 +47,12 @@
   "bin": {
     "mini-graphql-server": "./dist/bin/index.js",
     "mgqls": "./dist/bin/index.js"
+  },
+  "dependencies": {
+    "apollo-server-micro": "^1.3.4",
+    "graphql": "^0.13.2",
+    "graphql-tools": "^2.23.1",
+    "micro": "^9.1.4",
+    "microrouter": "^3.1.1"
   }
 }
