micro-dev working

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mini-graphql-server",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "A simple zero-configuration command-line GraphQL server.",
   "main": "./dist/lib/index.js",
   "author": "Benjamin H Boruff",
@@ -17,6 +17,7 @@
     "start": "yarn build && node ./dist/bin/index.js",
     "babel:watch": "babel src/lib -d dist/lib --watch",
     "test:watch": "ava --watch",
+    "dev:micro": "micro-dev dist/lib/index.js",
     "test": "ava",
     "build": "babel src -d dist"
   },
