--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mini-graphql-server",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A simple zero-configuration command-line GraphQL server.",
   "main": "./dist/lib/index.js",
   "repository": {
@@ -44,8 +44,10 @@
     ]
   },
   "files": [
-    "dist/lib",
-    "dist/bin"
+    "dist/lib/schema/index.js",
+    "dist/lib/resolvers/index.js",
+    "dist/lib/index.js",
+    "dist/bin/index.js"
   ],
   "contributors": [
     {
