trying to fix publish problem with missing files

--- a/package.json
+++ b/package.json
@@ -44,10 +44,8 @@
     ]
   },
   "files": [
-    "dist/lib/schema/index.js",
-    "dist/lib/resolvers/index.js",
-    "dist/lib/index.js",
-    "dist/bin/index.js"
+    "dist/lib",
+    "dist/bin"
   ],
   "contributors": [
     {
