--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "devDependencies": {
     "ava": "^1.0.0-beta.3",
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.2.2",
     "babel-preset-env": "^1.6.1",
+    "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
     "micro-dev": "^2.2.2",
     "request": "^2.85.0",
